--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	
+
 -->
 <html>
 	<head>
@@ -34,9 +34,8 @@
 					<div class="content">
 						<header class="major">
 							<h2>About Me</h2>
-								<span class=""><img src="images/Shannon ArtDeco.png" alt="" /></span>
 						</header>
-							<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Web developer, writer and UX/UI Designer in training. Process driven, I provide elegant solutions for complex problems.</p>
+							<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Hello, I'm Shannon. Web developer, writer and UX/UI Designer in training. Process driven, I provide elegant solutions for complex problems.</p>
 						<ul class="icons">
 							<li><a href="https://twitter.com/shannonkmc2" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/shannon-mccormack-054a8b76/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -94,7 +93,7 @@
 						<header class="major">
 							<h2>Experience</h2>
 						</header>
-						<p>After graduating from North Dakota State University with a Bachelor of Science in History, I spent several years substitute teaching. My professional experiences include serving with the Federal Emergency Management Agency’s IT Cadre and as a Technical Analyst at the Maryland Department of Legislative Services. I’m currently enrolled in Flatiron School’s full-stack web developer track and Quinnipiac University’s Graduate Certificate in User Experience Design program.</p>
+						<p>After graduating from North Dakota State University with a Bachelor of Science in History, I spent several years substitute teaching and learning about technology. My professional experiences include serving with the Federal Emergency Management Agency’s IT Cadre, and also as a Technical Analyst at the Maryland Department of Legislative Services. I’m currently enrolled in Flatiron School’s full-stack web developer track and Quinnipiac University’s Graduate Certificate in User Experience Design program.</p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</div>
@@ -151,7 +150,7 @@
 						<li><a href="mailto:shannonkmc@gmail.com" class="icon alt fa-envelope"><span target="_blank"</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Shannon McCormack</li><li>Images and Design: Shannon McCormack</a></li>
+						<li>&copy; Shannon McCormack</li><li>Images: Shannon McCormack</a></li>
 					</ul>
 				</footer>
 			</section>
