Fixed spelling error.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>Shannon McCormack</h1>
-					<p>Web Devloper | Designer</p>
+					<p>Web Developer | Designer</p>
 				</header>
 				<div class="container">
 					<ul class="actions">
