--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-							<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Hello, I'm Shannon. Web developer, writer and UX/UI Designer in training. Process driven, I provide elegant solutions for complex problems.</p>
+							<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Hello, I'm Shannon. Web developer, writer and UX/UI designer in training. Process driven, I provide elegant solutions for complex problems.</p>
 						<ul class="icons">
 							<li><a href="https://twitter.com/shannonkmc2" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/shannon-mccormack-054a8b76/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
