--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-							<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Hello, I'm Shannon. Web developer, writer and UX/UI designer in training. Process driven, I provide elegant solutions for complex problems.</p>
+							<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Hello, I'm Shannon McCormack. Web developer, writer and UX/UI designer in training. Process driven, I provide elegant solutions for complex problems.</p>
 						<ul class="icons">
 							<li><a href="https://twitter.com/shannonkmc2" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/shannon-mccormack-054a8b76/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -52,7 +52,7 @@
 					<span class="image fit primary"><img src="images/IMG_0484.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Technologies</h2>
+							<h2>Skills and Expertise</h2>
 						</header>
 						<ul class="icons-grid">
 							<li>
@@ -74,10 +74,10 @@
 								<h3>Redux</h3>
 							</li>
 							<li>
-								<h3>Ruby</h3>
+								<h3>Ruby on Rails</h3>
 							</li>
 							<li>
-								<h3>Rails</h3>
+								<h3>Technical Support</h3>
 							</li>
 						</ul>
 					</div>
@@ -93,7 +93,7 @@
 						<header class="major">
 							<h2>Experience</h2>
 						</header>
-						<p>After graduating from North Dakota State University with a Bachelor of Science in History, I spent several years substitute teaching and learning about technology. My professional experiences include serving with the Federal Emergency Management Agency’s IT Cadre, and also as a Technical Analyst at the Maryland Department of Legislative Services. I’m currently enrolled in Flatiron School’s full-stack web developer track and Quinnipiac University’s Graduate Certificate in User Experience Design program.</p>
+						<p>After graduating from North Dakota State University with a Bachelor of Science in History, I spent several years substitute teaching and learning more about technology. My professional experiences include serving with the Federal Emergency Management Agency as an IT Customer Service Manager. I’ve also worked with Anne Arundel Public Schools as Technology Support Technician and with the Maryland Department of Legislative Services as a Technical Analyst. I’m currently enrolled in Flatiron School’s full-stack web developer track and Quinnipiac University’s Graduate Certificate in User Experience Design program. </p>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</div>
