Changed format and text of experience section.

--- a/index.html
+++ b/index.html
@@ -3,166 +3,191 @@
 
 -->
 <html>
-	<head>
-		<title>Shannon McCormack | Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Header -->
-			<section id="header">
+<head>
+	<title>Shannon McCormack | Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
+
+<body>
+
+	<!-- Header -->
+	<section id="header">
+		<header class="major">
+			<h1>Shannon McCormack</h1>
+			<p>Web Developer | Designer</p>
+		</header>
+		<div class="container">
+			<ul class="actions">
+				<li><a href="#one" class="button special scrolly">Learn More</a></li>
+			</ul>
+		</div>
+	</section>
+
+	<!-- One -->
+	<section id="one" class="main special">
+		<div class="container">
+			<span class="image fit primary"><img src="images/IMG_0437.JPG" alt="" /></span>
+			<div class="content">
 				<header class="major">
-					<h1>Shannon McCormack</h1>
-					<p>Web Developer | Designer</p>
+					<h2>Introduction</h2>
 				</header>
-				<div class="container">
-					<ul class="actions">
-						<li><a href="#one" class="button special scrolly">Learn More</a></li>
+				<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Hello, I'm Shannon McCormack. I’m a web developer, writer and UX/UI designer in training. Process driven, I provide elegant solutions for complex problems. I’m currently
+					enrolled in Quinnipiac University’s Graduate Certificate in User Experience Design program.</p>
+				<ul class="icons">
+					<li><a href="https://twitter.com/shannonkmc2" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.linkedin.com/in/shannon-mccormack-054a8b76/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/magpiemac" class="icon alt fa-github"><span class="label">Github</span></a></li>
+					<li><a href="mailto:shannonkmc@gmail.com" class="icon alt fa-envelope"><span target="_blank"</span></a></li>
+				</ul>
+				<a href="#two" class="goto-next scrolly">Next</a>
+			</div>
+	</section>
+
+	<!-- Two -->
+	<section id="two" class="main special">
+		<div class="container">
+			<span class="image fit primary"><img src="images/canyon.jpg" alt="" /></span>
+			<div class="content">
+				<header class="major">
+					<h2>Skills and Expertise</h2>
+				</header>
+				<ul class="icons-grid">
+					<li>
+						<h3>HTML5</h3>
+					</li>
+					<li>
+						<h3>CSS3</h3>
+					</li>
+					<li>
+						<h3>Sass</h3>
+					</li>
+					<li>
+						<h3>Bootstrap</h3>
+					</li>
+					<li>
+						<h3>JavaScript</h3>
+					</li>
+					<li>
+						<h3>React</h3>
+					</li>
+					<li>
+						<h3>Redux</h3>
+					</li>
+					<li>
+						<h3>Ruby</h3>
+					</li>
+					<li>
+						<h3>Rails</h3>
+					</li>
+					<li>
+						<h3>Technical Support</h3>
+					</li>
+				</ul>
+			</div>
+			<a href="#three" class="goto-next scrolly">Next</a>
+		</div>
+	</section>
+
+	<!-- Three -->
+	<section id="three" class="main special">
+		<div class="container">
+			<span class="image fit primary"><img src="images/IMG_0484.jpg" alt="" /></span>
+			<div class="content">
+				<header class="major">
+					<h2>Experience</h2>
+				</header>
+				<header>
+					<h4>Maryland Department of Legislative Services</h4>
+					<h5>Technical Support Analyst</h5>
+				</header>
+				<p>As an essential member of the Office of Information Systems, I provided expert technical assistance to Senate and House of Delegates members and staff. My duties included serving as the Project Lead for the Windows 10 Senate floor laptop upgrades.</p>
+				<header>
+					<h4>Anne Arundel County Public Schools</h4>
+					<h5>Technology Support Technician</h5>
+				</header>
+				<p>I delivered technical training and assistance to over 1,000 users (students and staff). Performed successful upgrades, repairs, inventory and monitoring of two school networks, computer labs and SMART classroom equipment.</p>
+				<header>
+					<h4>Federal Emergency Management Agency</h4>
+					<h5>Disaster Assistance Employee (IT Cadre)</h5>
+				</header>
+				<p>I streamlined the setup of incoming staff user accounts, permissions, and equipment. I also provided staff with software training, troubleshooting and assisted with the expedited set-up of temporary FEMA field offices.</p>
+				<a href="#four" class="goto-next scrolly">Next</a>
+			</div>
+	</section>
+
+	<!-- Four -->
+	<section id="four" class="main">
+		<div class="container">
+			<span class="image fit primary"><img src="images/IMG_0779.jpg" alt="" /></span>
+			<div class="content">
+				<header class="major">
+					<h2>Projects</h2>
+				</header>
+				<section>
+					<ul class="none">
+						<li><a href="https://github.com/magpiemac/Bibliophile"><span class="label">Bibliophile</span></a></li>
+						<p>A React and Redux web app for notes on your personal library. Keep track of what you are reading and your favorite authors.</p>
+						<li><a href="https://github.com/magpiemac/Your-Capsule-Wardrobe-Tracker"><span class="label">Your Capsule Wardrobe Tracker</span></a></li>
+						<p>A Rails web app for tracking and organizing your wardrobe based on style, season or occasion.</p>
+						<li><a href="https://github.com/magpiemac/glutenfree-restaurants-cli-app"><span class="label">Gluten Free Restaurants</span></a></li>
+						<p>A Ruby gem built to view the top 40 restaurants in Annapolis, MD that serve gluten free items.</p>
 					</ul>
-				</div>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/canyon.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>About Me</h2>
-						</header>
-							<p><span class="image left"><img src="images/Shannon McCormack.jpg" alt="" /></span>Hello, I'm Shannon McCormack. Web developer, writer and UX/UI designer in training. Process driven, I provide elegant solutions for complex problems.</p>
-						<ul class="icons">
-							<li><a href="https://twitter.com/shannonkmc2" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.linkedin.com/in/shannon-mccormack-054a8b76/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/magpiemac" class="icon alt fa-github"><span class="label">Github</span></a></li>
-								<li><a href="mailto:shannonkmc@gmail.com" class="icon alt fa-envelope"><span target="_blank"</span></a></li>
-						</ul>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/IMG_0484.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>Skills and Expertise</h2>
-						</header>
-						<ul class="icons-grid">
-							<li>
-								<h3>HTML5</h3>
-							</li>
-							<li>
-								<h3>CSS3</h3>
-							</li>
-							<li>
-								<h3>Sass</h3>
-							</li>
-							<li>
-								<h3>JavaScript</h3>
-							</li>
-							<li>
-								<h3>React</h3>
-							</li>
-							<li>
-								<h3>Redux</h3>
-							</li>
-							<li>
-								<h3>Ruby on Rails</h3>
-							</li>
-							<li>
-								<h3>Technical Support</h3>
-							</li>
-						</ul>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
-
-		<!-- Three -->
-			<section id="three" class="main special">
-				<div class="container">
-					<span class="image fit primary"><img src="images/IMG_0437.jpg" alt="" /></span>
-					<div class="content">
-						<header class="major">
-							<h2>Experience</h2>
-						</header>
-						<p>After graduating from North Dakota State University with a Bachelor of Science in History, I spent several years substitute teaching and learning more about technology. My professional experiences include serving with the Federal Emergency Management Agency as an IT Customer Service Manager. I’ve also worked with Anne Arundel Public Schools as Technology Support Technician and with the Maryland Department of Legislative Services as a Technical Analyst. I’m currently enrolled in Flatiron School’s full-stack web developer track and Quinnipiac University’s Graduate Certificate in User Experience Design program. </p>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
-
-		<!-- Four -->
-
-			<section id="four" class="main">
-				<div class="container">
-					<div class="content">
-						<header class="major">
-							<h2>Projects</h2>
-						</header>
-						<section>
-							<ul class="none">
-								<li><a href="https://github.com/magpiemac/Bibliophile"><span class="label">Bibliophile</span></a></li>
-									 <p>A React and Redux web app for notes on your personal library. Keep track of what you are reading and your favorite authors.</p>
-								<li><a href="https://github.com/magpiemac/Your-Capsule-Wardrobe-Tracker"><span class="label">Your Capsule Wardrobe Tracker</span></a></li>
-								   <p>A Rails web app for tracking and organizing your wardrobe based on style, season or occasion.</p>
-								<li><a href="https://github.com/magpiemac/glutenfree-restaurants-cli-app"><span class="label">Gluten Free Restaurants</span></a></li>
-	 								 <p>A Ruby gem built to view the top 40 restaurants in Annapolis, MD that serve gluten free items.</p>
-							</ul>
-						<section>
-					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
-				</div>
-			</section>
+					<section>
+			</div>
+			<a href="#footer" class="goto-next scrolly">Next</a>
+		</div>
+		</section>
 		-->
 
 		<!-- Footer -->
-			<section id="footer">
-				<div class="container">
-					<header class="major">
-						<h2>Get in touch</h2>
-					</header>
-					<form method="post" action="https://formspree.io/shannonkmc@gmail.com">
-						<div class="row uniform">
-							<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-							<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-							<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-							<div class="12u$">
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="special" /></li>
-								</ul>
-							</div>
+		<section id="footer">
+			<div class="container">
+				<header class="major">
+					<h2>Get in touch</h2>
+				</header>
+				<form method="post" action="https://formspree.io/shannonkmc@gmail.com">
+					<div class="row uniform">
+						<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+						<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+						<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+						<div class="12u$">
+							<ul class="actions">
+								<li><input type="submit" value="Send Message" class="special" /></li>
+							</ul>
 						</div>
-					</form>
-				</div>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://twitter.com/shannonkmc2" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.linkedin.com/in/shannon-mccormack-054a8b76/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/magpiemac" class="icon alt fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:shannonkmc@gmail.com" class="icon alt fa-envelope"><span target="_blank"</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Shannon McCormack</li><li>Images: Shannon McCormack</a></li>
-					</ul>
-				</footer>
-			</section>
+					</div>
+				</form>
+			</div>
+			<footer>
+				<ul class="icons">
+					<li><a href="https://twitter.com/shannonkmc2" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.linkedin.com/in/shannon-mccormack-054a8b76/" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/magpiemac" class="icon alt fa-github"><span class="label">Github</span></a></li>
+					<li><a href="mailto:shannonkmc@gmail.com" class="icon alt fa-envelope"><span target="_blank"</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Shannon McCormack</li>
+					<li>Images: Shannon McCormack</a>
+					</li>
+				</ul>
+			</footer>
+		</section>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
