--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!-- One -->
 	<section id="one" class="main special">
 		<div class="container">
-			<span class="image fit primary"><img src="images/IMG_0795.JPG" alt="" /></span>
+			<span class="image fit primary"><img src="images/IMG_0795.jpg" alt="" /></span>
 			<div class="content">
 				<header class="major">
 					<h2>Introduction</h2>
